# alphapy-pro

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  cleanup_runs.sh  environment.yml  pyproject.toml  readthedocs.yml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: development.yml  docs.yml  pre-commit.yml  release.yml  tests.yml
AskAlpha_Frontend/: ask_alpha.py  requests_ap.py
MFlow_Backend/: mflow_live.py  mflow_server.py
agent/: __init__.py  trading_agent.py
agent/config/: agent.yml
agent/tools/: __init__.py  base.py  market_data.py  memory.py  order_execution.py  portfolio_state.py  risk_checks.py  signal_generator.py
agent/utils/: __init__.py  alpaca_client.py  feature_calculator.py  market_hours.py  model_loader.py
alphapy/: Deep_Alpha.py  __init__.py  alphapy_main.py  alphapy_nlp.py  alphapy_requests.py  analysis.py  ask_alpha.py  ask_alpha_streamlit.py  backtest.py  calendrical.py  client_secrets.json  data.py  estimators.py  features.py  frame.py  globals.py  google_drive.py  google_utils.py  group.py  iex.py  log.txt  metalabel.py  mflow_live.py  mflow_main.py  mflow_server.py  mflow_server.yml  model.py  nlp.py  optimize.py  pivots.py  plots.py  polygon.py  portfolio.py  rank_metrics.py  requests_ap.py  sflow_live.py  sflow_main.py  streamlit.py  streamlit_aflow.py  streamlit_alphapy.py  (+13 more)
alphapy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
alphapy/.streamlit/: secrets.toml
alphapy/app/: ask_alpha.py  ask_alpha_pages.py  ask_alpha_streamlit.py
alphapy/app/.streamlit/: secrets.toml
alphapy/data_sources/: __init__.py  alpaca.py  base.py  polygon.py
alphapy/indicators/: __init__.py  engine.py  external.py  registry.py  spec.py
alphapy/notebooks/: Triple Barrier Method.ipynb
alphapy/pages/: Deep_ML.py  Deep_Sports.py  Finviz_Screener.py
alphapy/portfolio/: __init__.py  legacy.py  live.py
alphapy/tests/: test_polygon_socket.py
app/: README.md
app/agent/: __init__.py  config.py  coordinator.py
app/agent/autonomy/: __init__.py  confidence.py  graduation.py  performance.py
app/agent/backtest/: __init__.py  results.py  runner.py  strategies.py
app/agent/broker/: __init__.py  alpaca_client.py  monitor.py  order_manager.py  position_sizer.py  position_tracker.py
app/agent/core/: __init__.py  engine.py  reasoning.py  signal.py  state.py
app/agent/features/: __init__.py  engine.py  indicators.py
app/agent/ml/: __init__.py  backtest_ml.py  features.py  labeling.py  meta_model.py
app/agent/portfolio/: __init__.py  optimizer.py
app/agent/risk/: __init__.py  manager.py  rules.py  shared.py
app/agent/skills/: __init__.py  evaluator.py  loader.py  registry.py
app/backend/: .env.example  api.py  bar_aggregator.py  config.py  data_cache.py  data_fetcher.py  data_provider.py  fetch_substack_cookies.py  pattern_analyzer.py  pivots.py  post_composer.py  substack_publisher.py
app/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
app/frontend/src/: App.tsx  index.css  main.tsx
config/: README.md  algos.yml  alphapy.yml  alphapy.yml.template  groups.yml  indicators.yml  model.yml.template  sources.yml.template  systems.yml  variables.yml
docs/: PLAN-markets.md  conf.py  git-workflow.md  github-setup.md  index.rst  make.bat  publishing.md
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/introduction/: command.rst  install.rst  introduction.rst  quickstart.rst
docs/markets/: design-doc.md  trading-dashboard.html
docs/source/: alphapy.rst
docs/tutorials/: ncaab.rst
docs/user_guide/: amzn_daily.csv  amzn_intraday.csv  market_flow.rst  ncaa.csv  pipelines.rst  sport_flow.rst
mflow_app/: ask_alpha_markets.py  ask_alpha_markets_utils.py
notebooks/: TBM Intraday.ipynb  Triple Barrier Method.ipynb  pivots.ipynb
projects/: pivots.ipynb
projects/crypto/config/: market daily.yml  market.yml  model.yml
projects/kaggle/config/: model.yml
projects/metalabel/config/: market.yml  model.yml  model_regression.yml
projects/numerai/config/: algos.yml  model.yml
projects/orb/config/: market.yml  model.yml
projects/pizza/: README.md  build_dataset.py  plot_results.py
projects/pizza/config/: model.yml
projects/pizza/data/: test.csv  train.csv
projects/price-encoding/: Encoding.ipynb  Encoding_Test.ipynb  Transformer Model.ipynb
projects/ranker/config/: market.yml  model.yml
projects/shannons-demon/: README.md  demon.ipynb  shannon_demon_threshold.py  train.csv
projects/shannons-demon/config/: model.yml
projects/shannons-demon/data/: train.csv
projects/time-series/: README.md
projects/time-series/config/: model.yml
projects/time-series/data/: train.csv
projects/trade-gpt/: config.yaml  requirements.txt
projects/trade-gpt/src/: encode_corpus.py  evaluate.py  fetch_data.py  predict.py  train_causal.py  train_mlm.py  train_tokenizer.py
projects/two-sigma/config/: market.yml  model.yml  model_regression.yml
projects/v-system/config/: market.yml  model.yml
projects/v-system/systems/: all_V_positions_1D.csv  (+7 more)
scripts/: __init__.py  bump_version.py  run_agent.py
scripts/markets/: analyze_encoding_deep.py  analyze_encoding_patterns.py  massive_app.py  massive_screener.py  test_massive.py  test_massive_top_gainers.py
sflow_app/: ask_alpha_sports.py  ask_alpha_sports_utils.py  betting_data.py  google_utils.py  impute_data.py  setup.py  sflow_globals.py  sflow_main.py
sflow_app/config/: config_mlb.yml  config_nba.yml  config_ncaab.yml  config_ncaaf.yml  config_nfl.yml  config_nhl.yml
tests/: conftest.py  polygon_screener.py  test_imports.py  test_openai_api_key.py  test_version.py  test_yfinance.py
tests/alphapy/: test_backtest.py  test_data_sources_base.py  test_data_sources_polygon.py  test_indicators_engine.py  test_indicators_registry.py  test_portfolio_live.py
tests/integration/: test_full_trading_cycle.py  test_indicator_pipeline.py
(+112 files in other folders)
